--- a/index.html
+++ b/index.html
@@ -1,60 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            height: 100vh;
-            justify-content: center;
-            align-items: center;
-        }
-        .login-container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            width: 300px;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        input[type="text"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #5c67f2;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #4a54e1;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bhanu Sai Nageswar Pulivarthi - Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #2e3a59;
+      color: white;
+      padding: 30px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background: white;
+      margin-top: 20px;
+      border-radius: 8px;
+    }
+    h2 {
+      color: #2e3a59;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    .contact {
+      background-color: #ddd;
+      padding: 10px;
+      border-radius: 6px;
+      margin-bottom: 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #2e3a59;
+      color: white;
+      margin-top: 40px;
+    }
+    a {
+      color: #2e3a59;
+    }
+  </style>
 </head>
 <body>
 
-<div class="login-container">
-    <h2>Login</h2>
-    <form action="login.php" method="POST">
-        <input type="text" name="username" placeholder="Username" required />
-        <input type="password" name="password" placeholder="Password" required />
-        <button type="submit">Login</button>
-    </form>
-</div>
+<header>
+  <h1>Bhanu Sai Nageswar Pulivarthi</h1>
+  <p>DevOps Engineer | HCL Technologies Ltd</p>
+</header>
+
+<section class="contact">
+  <p>📞 +91 9652475464</p>
+  <p>📧 <a href="mailto:pbsnageswar@gmail.com">pbsnageswar@gmail.com</a></p>
+  <p>📍 Bangalore, India - 560048</p>
+  <p>🌐 <a href="https://www.linkedin.com/in/pulivarthi-bhanu-sai-nageswar885218205">LinkedIn Profile</a></p>
+</section>
+
+<section>
+  <h2>Personal Summary</h2>
+  <p>Accomplished Software Engineer with a proven track record at HCL Technologies Ltd, specializing in DevOps practices and tools like Jenkins, Docker, and Kubernetes. Demonstrated expertise in CI/CD pipelines, containerization, and production support.</p>
+</section>
+
+<section>
+  <h2>Skills</h2>
+  <ul>
+    <li>Jenkins, Docker, Kubernetes, Ansible, AWS (EC2)</li>
+    <li>GitHub, Git, Jira, Confluence</li>
+    <li>Monitoring & Logging, Release Management, Shell Scripting</li>
+    <li>Configuration Management</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Work Experience</h2>
+  <h3>DevOps Engineer – HCL Technologies Ltd (Nov 2022 - Present)</h3>
+  <ul>
+    <li>Managed version control using Git/GitHub</li>
+    <li>Improved customer satisfaction by 30% via project estimation and planning</li>
+    <li>Automated builds using Maven and shell scripts</li>
+    <li>Implemented CI/CD with Jenkins</li>
+    <li>Used Docker & Kubernetes for containerization</li>
+    <li>Handled build failures and release issues efficiently</li>
+  </ul>
+
+  <h3>Campus Ambassador – Upskilz (May 2022 - Jul 2025)</h3>
+  <ul>
+    <li>Organized promotional campaigns and workshops for students</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Education</h2>
+  <ul>
+    <li><strong>B.Tech</strong> – Sreenivasa Institute of Tech, Jan 2025 (Chittoor)</li>
+    <li><strong>Intermediate</strong> – R K Vidyalaya and Jr College, Mar 2018</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Projects</h2>
+  <ul>
+    <li>Web Application on Student Results (2021)</li>
+    <li>Gas Leakage Alarm (2019)</li>
+    <li>Hydro Electricity Dam Prototype (2019)</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Languages</h2>
+  <ul>
+    <li>Telugu – Native</li>
+    <li>Hindi – Limited Working Proficiency</li>
+    <li>English – Full Professional Proficiency</li>
+    <li>Tamil – Limited Working Proficiency</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Certifications</h2>
+  <ul>
+    <li>Ethical Hacking by Indian Servers</li>
+  </ul>
+</section>
+
+<footer>
+  <p>© 2025 Bhanu Sai Nageswar Pulivarthi</p>
+</footer>
 
 </body>
 </html>
