--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <header>
   <h1>Bhanu Sai Nageswar Pulivarthi</h1>
   <p>DevOps Engineer | HCL Technologies Ltd</p>
+  <img src="profile.jpg" alt="Bhanu Sai Nageswar" style="width: 150px; border-radius: 50%; margin-top: 10px;">
 </header>
 
 <section class="contact">
