--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 </head>
 <body>
 
-<header>
-  <h1>Bhanu Sai Nageswar Pulivarthi</h1>
-  <p>DevOps Engineer | HCL Technologies Ltd</p>
-  <img src="profile.jpg" alt="Bhanu Sai Nageswar" style="width: 150px; border-radius: 50%; margin-top: 10px;">
+<header style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+  <img src="profile.jpg" alt="Bhanu Sai Nageswar" style="width: 120px; height: 120px; border-radius: 50%;">
+  <div>
+    <h1>Bhanu Sai Nageswar Pulivarthi</h1>
+    <p>DevOps Engineer | HCL Technologies Ltd</p>
+  </div>
 </header>
 
 <section class="contact">
