--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <header style="display: flex; align-items: center; justify-content: center; gap: 20px;">
   <img src="profile.jpg" alt="Bhanu Sai Nageswar" style="width: 120px; height: 120px; border-radius: 50%;">
   <div>
-    <h1>Bhanu Sai Nageswar Pulivarthi</h1>
+    <h1>Bhanu Sai Nageswar</h1>
     <p>DevOps Engineer | HCL Technologies Ltd</p>
   </div>
 </header>
